adds lenet5 model quantisation script and utils.p  scriot

--- a/lenet_training.ipynb
+++ b/lenet_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "6f13dab5-ebb3-4853-9b07-1b63fb297100",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "1b822d10-82b4-415d-86ba-e5b847da3686",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "817a917e-3c01-46e6-ab3f-153672ddb24b",
    "metadata": {},
    "outputs": [],
@@ -65,13 +65,12 @@
     "train_dataset = datasets.MNIST('./data', train=True, download=True, transform=transform)\n",
     "test_dataset = datasets.MNIST('./data', train=False, transform=transform)\n",
     "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=64)\n",
-    "calibration_loader = DataLoader(torch.utils.data.Subset(train_dataset, range(1000)), batch_size=64)"
+    "test_loader = DataLoader(test_dataset, batch_size=64)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "6e8567c3-5266-4a56-84b0-8e68aa28b0af",
    "metadata": {},
    "outputs": [],
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "c03e71ff-8677-41d0-817e-9305892f55e7",
    "metadata": {},
    "outputs": [
@@ -116,288 +115,288 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|▏                                          | 5/938 [00:00<00:43, 21.59it/s]"
+      "  0%|▏                                          | 4/938 [00:00<02:05,  7.45it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 2.3090 | training accuracy 0.0625 at step 0\n"
+      "Batch training loss 2.2973 | training accuracy 0.0625 at step 0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 11%|████▌                                    | 104/938 [00:04<00:37, 22.24it/s]"
+      " 11%|████▌                                    | 103/938 [00:05<00:36, 22.86it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.3827 | training accuracy 0.8750 at step 100\n"
+      "Batch training loss 0.4365 | training accuracy 0.8438 at step 100\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 22%|████████▊                                | 203/938 [00:08<00:32, 22.65it/s]"
+      " 22%|████████▊                                | 202/938 [00:09<00:32, 22.76it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.1576 | training accuracy 0.9531 at step 200\n"
+      "Batch training loss 0.1114 | training accuracy 0.9844 at step 200\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 32%|█████████████▏                           | 302/938 [00:13<00:27, 22.94it/s]"
+      " 32%|█████████████▏                           | 302/938 [00:13<00:28, 22.42it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.1318 | training accuracy 0.9219 at step 300\n"
+      "Batch training loss 0.1357 | training accuracy 0.9531 at step 300\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|█████████████████▋                       | 404/938 [00:18<00:24, 22.12it/s]"
+      " 43%|█████████████████▋                       | 404/938 [00:18<00:23, 23.07it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0549 | training accuracy 1.0000 at step 400\n"
+      "Batch training loss 0.0941 | training accuracy 0.9844 at step 400\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 54%|██████████████████████                   | 504/938 [00:22<00:19, 22.60it/s]"
+      " 54%|█████████████████████▉                   | 503/938 [00:22<00:19, 22.46it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0864 | training accuracy 0.9531 at step 500\n"
+      "Batch training loss 0.0324 | training accuracy 1.0000 at step 500\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 64%|██████████████████████████▎              | 603/938 [00:26<00:14, 22.89it/s]"
+      " 64%|██████████████████████████▎              | 602/938 [00:27<00:14, 22.63it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0951 | training accuracy 0.9531 at step 600\n"
+      "Batch training loss 0.3778 | training accuracy 0.9375 at step 600\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 75%|██████████████████████████████▋          | 702/938 [00:31<00:10, 23.21it/s]"
+      " 75%|██████████████████████████████▊          | 704/938 [00:31<00:10, 22.53it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.1010 | training accuracy 0.9688 at step 700\n"
+      "Batch training loss 0.0973 | training accuracy 0.9688 at step 700\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|███████████████████████████████████▏     | 804/938 [00:35<00:05, 23.43it/s]"
+      " 86%|███████████████████████████████████      | 803/938 [00:36<00:05, 24.13it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0610 | training accuracy 0.9844 at step 800\n"
+      "Batch training loss 0.1411 | training accuracy 0.9375 at step 800\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 96%|███████████████████████████████████████▍ | 903/938 [00:39<00:01, 22.52it/s]"
+      " 96%|███████████████████████████████████████▍ | 902/938 [00:40<00:01, 22.44it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0178 | training accuracy 1.0000 at step 900\n"
+      "Batch training loss 0.0077 | training accuracy 1.0000 at step 900\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 938/938 [00:41<00:00, 22.61it/s]\n",
-      "  0%|▏                                          | 3/938 [00:00<00:33, 28.12it/s]"
+      "100%|█████████████████████████████████████████| 938/938 [00:42<00:00, 22.24it/s]\n",
+      "  0%|▏                                          | 3/938 [00:00<00:36, 25.68it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0149 | training accuracy 1.0000 at step 0\n"
+      "Batch training loss 0.0254 | training accuracy 1.0000 at step 0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 11%|████▍                                    | 102/938 [00:04<00:36, 22.64it/s]"
+      " 11%|████▌                                    | 105/938 [00:04<00:32, 25.66it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.1064 | training accuracy 0.9688 at step 100\n"
+      "Batch training loss 0.0468 | training accuracy 0.9844 at step 100\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 22%|████████▉                                | 204/938 [00:08<00:30, 23.87it/s]"
+      " 22%|████████▉                                | 204/938 [00:08<00:32, 22.49it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0231 | training accuracy 1.0000 at step 200\n"
+      "Batch training loss 0.1072 | training accuracy 0.9531 at step 200\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 32%|█████████████▏                           | 303/938 [00:13<00:25, 25.34it/s]"
+      " 32%|█████████████▏                           | 303/938 [00:12<00:28, 22.48it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0259 | training accuracy 1.0000 at step 300\n"
+      "Batch training loss 0.1595 | training accuracy 0.9688 at step 300\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|█████████████████▌                       | 402/938 [00:17<00:23, 23.08it/s]"
+      " 43%|█████████████████▌                       | 402/938 [00:17<00:23, 22.49it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.1175 | training accuracy 0.9688 at step 400\n"
+      "Batch training loss 0.0323 | training accuracy 0.9844 at step 400\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 54%|██████████████████████                   | 505/938 [00:21<00:18, 23.58it/s]"
+      " 54%|██████████████████████                   | 504/938 [00:21<00:19, 22.38it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0618 | training accuracy 0.9844 at step 500\n"
+      "Batch training loss 0.0378 | training accuracy 0.9844 at step 500\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 64%|██████████████████████████▍              | 604/938 [00:25<00:13, 24.05it/s]"
+      " 64%|██████████████████████████▎              | 603/938 [00:26<00:14, 22.34it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0475 | training accuracy 0.9844 at step 600\n"
+      "Batch training loss 0.0775 | training accuracy 0.9688 at step 600\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 75%|██████████████████████████████▋          | 703/938 [00:29<00:10, 23.49it/s]"
+      " 75%|██████████████████████████████▋          | 702/938 [00:30<00:10, 22.25it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0113 | training accuracy 1.0000 at step 700\n"
+      "Batch training loss 0.0152 | training accuracy 1.0000 at step 700\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|███████████████████████████████████      | 802/938 [00:34<00:05, 22.98it/s]"
+      " 86%|███████████████████████████████████▏     | 804/938 [00:35<00:05, 22.62it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0048 | training accuracy 1.0000 at step 800\n"
+      "Batch training loss 0.0429 | training accuracy 0.9844 at step 800\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 96%|███████████████████████████████████████▍ | 902/938 [00:38<00:01, 22.62it/s]"
+      " 96%|███████████████████████████████████████▍ | 903/938 [00:39<00:01, 22.82it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch training loss 0.0392 | training accuracy 0.9688 at step 900\n"
+      "Batch training loss 0.0812 | training accuracy 0.9844 at step 900\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 938/938 [00:40<00:00, 23.45it/s]\n"
+      "100%|█████████████████████████████████████████| 938/938 [00:41<00:00, 22.80it/s]\n"
      ]
     }
    ],
@@ -410,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "3bae9181-25b9-4de7-b8fc-b80b3173d32a",
    "metadata": {},
    "outputs": [],
@@ -421,29 +420,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "d798aaa2-7698-4471-85ed-6437ff5e165c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['qnnpack', 'none']\n",
-      "none\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(torch.backends.quantized.supported_engines)\n",
-    "print(torch.backends.quantized.engine)\n",
-    "supported_engines = torch.backends.quantized.supported_engines\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "953e182c-f68c-4e1a-a501-be7c823998c4",
+   "id": "b16755db-d7b0-4363-9010-6e12ed6f95db",
    "metadata": {},
    "outputs": [],
    "source": []
