adds plotting changes

--- a/resnet_quantisation.ipynb
+++ b/resnet_quantisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "63cf3cac-d025-48a0-bd7b-1021187d998e",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "051f3660-7127-437c-8f03-8289a52135c8",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "'qnnpack'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "c1dbdc57-0d9b-40ac-8417-68e5fdfc6ed7",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "ece59438-5fb8-4b71-9f57-27727cb06750",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "4b3162a3-3590-4182-a61f-caa5cc46ba9c",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "dc69a20f-1b47-40e3-be74-bad41a6dc3ae",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        ")"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "94270303-3d6c-4c45-a7bd-dbf174aa06ac",
    "metadata": {},
    "outputs": [
@@ -790,7 +790,7 @@
        ")"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "34e584e0-ca34-4271-aedc-4fac9636e434",
    "metadata": {},
    "outputs": [
@@ -810,29 +810,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 13%|██              | 20/157 [02:59<20:28,  8.97s/it, Loss=1.4385, Top1=67.89%]\n"
+      "100%|███████████████| 157/157 [23:32<00:00,  9.00s/it, Loss=1.6259, Top1=62.42%]\n"
      ]
     }
    ],
    "source": [
-    "baseline_metrics = evaluate_model(baseline_model, test_loader, 'resnet50', batches=20)"
+    "baseline_metrics = evaluate_model(baseline_model, test_loader, 'resnet50')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "10153bac-7d0c-4829-866e-27be500abe4d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'top1_acc': 0.67890625,\n",
-       " 'top5_acc': 0.8640625,\n",
-       " 'total_inference_time': 179.36567187309265,\n",
-       " 'average_inference_time': 8.968283593654633,\n",
-       " 'average_loss': 92.06193466186524,\n",
-       " 'total_batches': 20,\n",
+       "{'top1_acc': 0.6242,\n",
+       " 'top5_acc': 0.8429,\n",
+       " 'total_inference_time': 1412.3039989471436,\n",
+       " 'average_inference_time': 8.9955668722748,\n",
+       " 'average_loss': 103.42139172402157,\n",
+       " 'total_batches': 157,\n",
        " 'all_losses': [],\n",
        " 'all_top1_acc': [],\n",
        " 'inference_times': [],\n",
@@ -840,7 +840,7 @@
        " 'predicted_labels': []}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "a4c8596e-13eb-4684-9ea9-659f73568c1e",
    "metadata": {},
    "outputs": [
@@ -859,30 +859,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[W411 18:13:41.853032000 qlinear_dynamic.cpp:252] Warning: Currently, qnnpack incorrectly ignores reduce_range when it is set to true; this may change in a future release. (function operator())\n",
-      " 13%|██              | 20/157 [02:48<19:16,  8.44s/it, Loss=1.4379, Top1=67.97%]\n"
+      "[W412 12:55:02.776980000 qlinear_dynamic.cpp:252] Warning: Currently, qnnpack incorrectly ignores reduce_range when it is set to true; this may change in a future release. (function operator())\n",
+      "100%|███████████████| 157/157 [23:36<00:00,  9.02s/it, Loss=1.6258, Top1=62.38%]\n"
      ]
     }
    ],
    "source": [
-    "baseline_dy_metrics = evaluate_model(quantized_dy_model, test_loader, 'resnet50', batches=20)"
+    "baseline_dy_metrics = evaluate_model(quantized_dy_model, test_loader, 'resnet50')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "db79fff9-7137-4e4f-b56a-65552b578606",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'top1_acc': 0.6796875,\n",
-       " 'top5_acc': 0.86484375,\n",
-       " 'total_inference_time': 168.82906484603882,\n",
-       " 'average_inference_time': 8.441453242301941,\n",
-       " 'average_loss': 92.02371177673339,\n",
-       " 'total_batches': 20,\n",
+       "{'top1_acc': 0.6238,\n",
+       " 'top5_acc': 0.8429,\n",
+       " 'total_inference_time': 1416.166141986847,\n",
+       " 'average_inference_time': 9.020166509470362,\n",
+       " 'average_loss': 103.40966021179393,\n",
+       " 'total_batches': 157,\n",
        " 'all_losses': [],\n",
        " 'all_top1_acc': [],\n",
        " 'inference_times': [],\n",
@@ -890,7 +890,7 @@
        " 'predicted_labels': []}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "d050443b-72b7-44fb-882e-3f6a800d109b",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 16/16 [02:38<00:00,  9.91s/it]\n"
+      "100%|███████████████████████████████████████████| 16/16 [02:34<00:00,  9.68s/it]\n"
      ]
     },
     {
@@ -1028,7 +1028,7 @@
        ")"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "c390bd51-7224-43c8-87e1-3b4927c960b2",
    "metadata": {},
    "outputs": [],
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "23608329-8389-4e58-8615-85ddffa097e5",
    "metadata": {},
    "outputs": [
@@ -1062,30 +1062,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 13%|██              | 20/157 [00:40<04:37,  2.03s/it, Loss=1.4156, Top1=68.83%]\n"
+      "100%|███████████████| 157/157 [05:53<00:00,  2.25s/it, Loss=1.6228, Top1=62.19%]\n"
      ]
     }
    ],
    "source": [
-    "baseline_st_metrics = evaluate_model(base_st_quant_model, test_loader, 'resnet50',\n",
-    "                                    batches=20)"
+    "baseline_st_metrics = evaluate_model(base_st_quant_model, test_loader, 'resnet50')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "6751af77-239c-4b63-bc42-20b9ab255715",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'top1_acc': 0.68828125,\n",
-       " 'top5_acc': 0.86640625,\n",
-       " 'total_inference_time': 40.570319175720215,\n",
-       " 'average_inference_time': 2.0285159587860107,\n",
-       " 'average_loss': 90.5962652206421,\n",
-       " 'total_batches': 20,\n",
+       "{'top1_acc': 0.6219,\n",
+       " 'top5_acc': 0.8425,\n",
+       " 'total_inference_time': 353.2770128250122,\n",
+       " 'average_inference_time': 2.250172056210269,\n",
+       " 'average_loss': 103.22040442752231,\n",
+       " 'total_batches': 157,\n",
        " 'all_losses': [],\n",
        " 'all_top1_acc': [],\n",
        " 'inference_times': [],\n",
@@ -1093,7 +1092,7 @@
        " 'predicted_labels': []}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "dcb4d69a-47a5-40e0-ac83-05002e296c08",
    "metadata": {},
    "outputs": [
@@ -1292,7 +1291,7 @@
        ")"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "9bfc08ac-05c0-4c79-9b84-17b2268a31f3",
    "metadata": {},
    "outputs": [],
@@ -1318,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "b38b1b80-c67d-4e66-9e4d-8aae09e73cec",
    "metadata": {},
    "outputs": [
@@ -1551,7 +1550,7 @@
        ")"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "232a67c7-867e-4df9-8de4-3e073257f559",
    "metadata": {},
    "outputs": [],
@@ -1573,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "id": "bde925a5-bfa9-4834-b322-0d217f8a1fc3",
    "metadata": {},
    "outputs": [
@@ -1581,30 +1580,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 13%|██              | 20/157 [02:13<15:15,  6.68s/it, Loss=1.4421, Top1=67.19%]\n"
+      "100%|███████████████| 157/157 [20:49<00:00,  7.96s/it, Loss=1.6869, Top1=63.18%]\n"
      ]
     }
    ],
    "source": [
-    "sparse_prun_base_metrics = evaluate_model(sparse_pruned_resnet_model, test_loader, 'resnet50',\n",
-    "                                    batches=20)"
+    "sparse_prun_base_metrics = evaluate_model(sparse_pruned_resnet_model, test_loader, 'resnet50')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "id": "0337c5ad-15b9-4b39-9eeb-628eae447d6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'top1_acc': 0.671875,\n",
-       " 'top5_acc': 0.88203125,\n",
-       " 'total_inference_time': 133.68401098251343,\n",
-       " 'average_inference_time': 6.684200549125672,\n",
-       " 'average_loss': 92.29704055786132,\n",
-       " 'total_batches': 20,\n",
+       "{'top1_acc': 0.6318,\n",
+       " 'top5_acc': 0.8495,\n",
+       " 'total_inference_time': 1249.0078840255737,\n",
+       " 'average_inference_time': 7.955464229462253,\n",
+       " 'average_loss': 107.34647544933732,\n",
+       " 'total_batches': 157,\n",
        " 'all_losses': [],\n",
        " 'all_top1_acc': [],\n",
        " 'inference_times': [],\n",
@@ -1612,7 +1610,7 @@
        " 'predicted_labels': []}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "id": "a6b0b415-898d-49ba-b603-65c4bd2fc351",
    "metadata": {},
    "outputs": [
@@ -1631,30 +1629,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 13%|██              | 20/157 [02:08<14:41,  6.44s/it, Loss=1.4419, Top1=67.11%]\n"
+      "100%|███████████████| 157/157 [19:12<00:00,  7.34s/it, Loss=1.6876, Top1=63.13%]\n"
      ]
     }
    ],
    "source": [
-    "sparse_prun_dy_quant_metrics = evaluate_model(sparse_pruned_dy_quant, test_loader, 'resnet50',\n",
-    "                                    batches=20)"
+    "sparse_prun_dy_quant_metrics = evaluate_model(sparse_pruned_dy_quant, test_loader, 'resnet50')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "id": "999ca1b0-2102-4225-8871-08acf7b73477",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'top1_acc': 0.67109375,\n",
-       " 'top5_acc': 0.8796875,\n",
-       " 'total_inference_time': 128.75862503051758,\n",
-       " 'average_inference_time': 6.437931251525879,\n",
-       " 'average_loss': 92.28345327377319,\n",
-       " 'total_batches': 20,\n",
+       "{'top1_acc': 0.6313,\n",
+       " 'top5_acc': 0.849,\n",
+       " 'total_inference_time': 1152.8256080150604,\n",
+       " 'average_inference_time': 7.3428382676118495,\n",
+       " 'average_loss': 107.38760610446809,\n",
+       " 'total_batches': 157,\n",
        " 'all_losses': [],\n",
        " 'all_top1_acc': [],\n",
        " 'inference_times': [],\n",
@@ -1662,7 +1659,7 @@
        " 'predicted_labels': []}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1673,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "id": "bc02581a-e5ab-433e-bc8a-f451519950db",
    "metadata": {},
    "outputs": [
@@ -1681,7 +1678,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 16/16 [02:34<00:00,  9.63s/it]\n"
+      "100%|███████████████████████████████████████████| 16/16 [02:36<00:00,  9.76s/it]\n"
      ]
     },
     {
@@ -1800,7 +1797,7 @@
        ")"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1814,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "id": "5292422b-e832-47b2-ad6f-a0290ff6e541",
    "metadata": {},
    "outputs": [],
@@ -1825,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "id": "4f228225-928c-4823-bd7f-a8a016e9a4b3",
    "metadata": {},
    "outputs": [
@@ -1833,30 +1830,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 13%|██              | 20/157 [00:39<04:27,  1.96s/it, Loss=1.4156, Top1=68.83%]\n"
+      "100%|███████████████| 157/157 [05:49<00:00,  2.22s/it, Loss=1.6228, Top1=62.19%]\n"
      ]
     }
    ],
    "source": [
-    "sparse_prun_st_quant_metrics = evaluate_model(sparse_pruned_st_quant_model, test_loader, 'resnet50',\n",
-    "                                    batches=20)"
+    "sparse_prun_st_quant_metrics = evaluate_model(sparse_pruned_st_quant_model, test_loader, 'resnet50')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "id": "dbd9072b-8267-4955-b213-1eb0dd918936",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'top1_acc': 0.68828125,\n",
-       " 'top5_acc': 0.86640625,\n",
-       " 'total_inference_time': 39.11063075065613,\n",
-       " 'average_inference_time': 1.9555315375328064,\n",
-       " 'average_loss': 90.5962652206421,\n",
-       " 'total_batches': 20,\n",
+       "{'top1_acc': 0.6219,\n",
+       " 'top5_acc': 0.8425,\n",
+       " 'total_inference_time': 349.1686441898346,\n",
+       " 'average_inference_time': 2.2240041031199658,\n",
+       " 'average_loss': 103.22040442752231,\n",
+       " 'total_batches': 157,\n",
        " 'all_losses': [],\n",
        " 'all_top1_acc': [],\n",
        " 'inference_times': [],\n",
@@ -1864,7 +1860,7 @@
        " 'predicted_labels': []}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1875,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "id": "17f43681-f79b-44cf-8421-e841ea30e23d",
    "metadata": {},
    "outputs": [],
@@ -1894,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "id": "78e7c147-2ef4-4ab4-a7a7-7bfcbb0c01d3",
    "metadata": {},
    "outputs": [],
